# AdventOfCode-2025

./: README.md  pyproject.toml
src/aoc_2025/: day_01_01.py  day_01_02.py  day_02_01.py  day_02_02.py  day_03_01.py  day_03_02.py  day_04_01.py  day_04_02.py  day_05_01.py  day_05_02.py  day_06_01.py  day_06_02.py  day_07_01.py  day_07_02.py  day_08_01.py  day_08_02.py  day_09_01.py  day_09_02.py  day_10_01.py  day_10_02.py  day_11_01.py  day_11_02.py  day_12_01.py
